[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Mapping sync logic for Frontier."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
fp-consensus = { path = "../../primitives/consensus" }
fc-consensus = { path = "../consensus" }
fc-db = { path = "../db" }
fp-rpc = { path = "../../primitives/rpc" }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"
